--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </script>
     <footer style="display:grid;align-content:end">
         <div style="background-color:#000000;color:#fff;text-align:center;padding:5px">
-            &copy;<a href="http://wa.me/51979338387">Desarrollado Por: Corporacion Conoden Cel. +51 979 338 387</a>
+            &copy;<a href="http://wa.me/51979338387">Desarrollado Por: " Corporacion Conoden "   Cel. +51 979 338 387</a>
         </div>
         <script>
             $(".mobile-nav-toggle").click(function () {
