--- a/index.html
+++ b/index.html
@@ -142,21 +142,21 @@
 	usevisualizer: "real",
 	visualizertype: "1.0",
 	displayliveicon: "true",
-  visualizeropacity: "1.0",
+        visualizeropacity: "1.0",
 	multicolorvisualizer: "true",
-  color1: "#00FF00",
-  color2: "#ffff00",
-  color3: "#FF1F6F",
-  color4: "#FF1F6F",
+        color1: "#00FF00",
+        color2: "#ffff00",
+        color3: "#FF1F6F",
+        color4: "#FF1F6F",
 	itunestoken: "1000lIPN",
-	metadatatechnic: "",
+	metadatatechnic: "fallback",  //fallback (usar para zeno)
 	ownmetadataurl: "",
-	streamurl: "https://stream.zenolive.com/negnsmcq44zuv",
-	streamtype: "radiozeno",
+	streamurl: "https://stream.zeno.fm.fm/wxpchhfw44zuv",
+	streamtype: "zeno",
+	idzeno: "negnsmcq44zuv",  //negnsmcq44zuv  //wxpchhfw44zuv
 	icecastmountpoint: "",
 	radionomyid: "",
 	radionomyapikey: "",
-	radiozenoid: "wxpchhfw44zuv",  //negnsmcq44zuv  //wxpchhfw44zuv
 	radiojarid: "",
 	radiocoid: "",
 	shoutcastpath: "/live",
