--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 	itunestoken: "1000lIPN",
 	metadatatechnic: "fallback",  //fallback (usar para zeno)
 	ownmetadataurl: "",
-	streamurl: "https://stream.zeno.fm.fm/wxpchhfw44zuv",
+	streamurl: "https://stream.zeno.fm/wxpchhfw44zuv",
 	streamtype: "zeno",
 	idzeno: "negnsmcq44zuv",  //negnsmcq44zuv  //wxpchhfw44zuv
 	icecastmountpoint: "",
