--- a/index.html
+++ b/index.html
@@ -142,24 +142,24 @@
 	usevisualizer: "real",
 	visualizertype: "1.0",
 	displayliveicon: "true",
-        visualizeropacity: "1.0",
+  visualizeropacity: "1.0",
 	multicolorvisualizer: "true",
-        color1: "#00FF00",
-        color2: "#ffff00",
-        color3: "#FF1F6F",
-        color4: "#FF1F6F",
+  color1: "#00FF00",
+  color2: "#ffff00",
+  color3: "#FF1F6F",
+  color4: "#FF1F6F",
 	itunestoken: "1000lIPN",
-	metadatatechnic: "fallback",  //fallback (usar para zeno)
+	metadatatechnic: "fallback", //fallback (usar para zeno)
 	ownmetadataurl: "",
 	streamurl: "https://stream.zeno.fm/wxpchhfw44zuv",
-	streamtype: "zeno",
+	streamtype: "zeno", //soporta: zeno, icecast2, shoutcast2
 	idzeno: "negnsmcq44zuv",  //negnsmcq44zuv  //wxpchhfw44zuv
 	icecastmountpoint: "",
 	radionomyid: "",
 	radionomyapikey: "",
 	radiojarid: "",
 	radiocoid: "",
-	shoutcastpath: "/live",
+	shoutcastpath: "",
 	shoutcastid: "1",
 	streamsuffix: "",
 	metadatainterval: "10000",
@@ -208,7 +208,7 @@
     </script>
     <footer style="display:grid;align-content:end">
         <div style="background-color:#000000;color:#fff;text-align:center;padding:5px">
-            &copy;<a href="http://wa.me/51979338387">Desarrollado Por: " Corporacion Conoden "   Cel. +51 979 338 387</a>
+            &copy;<a href="http://wa.me/51979338387">App Pwa Desarrollado Por: Corporacion Conoden Cel. 979338387</a>
         </div>
         <script>
             $(".mobile-nav-toggle").click(function () {
