--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:site_name" content="Radio Conoden" />
         <meta property="og:url" content="https://livestreamingmundial.com/pwa2025/" />
-        <meta property="og:title" content="Radio Platinum" />
+        <meta property="og:title" content="Radio Conoden" />
         <meta property="og:description" content="Radio Conoden - Me Activa" />
         <meta property="og:image" content="img/logo.png" />
         <meta property="og:image:type" content="logo.png" />
