--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="geo.placename" content="Radio Conoden" />
         <meta property="og:type" content="website" />
         <meta property="og:site_name" content="Radio Conoden" />
-        <meta property="og:url" content="https://livestreamingmundial.com/pwa2025/" />
+        <meta property="og:url" content="https://radioconoden.blogspot.com/" />
         <meta property="og:title" content="Radio Conoden" />
         <meta property="og:description" content="Radio Conoden - Me Activa" />
         <meta property="og:image" content="img/logo.png" />
